--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       
       - name: Use Git in the Workflow itself
         run: |
-          git config user.name 'Hardik Singh'
-          git config user.email 'singh.hardik1997@gmail.com'
+#          git config user.name 'Hardik Singh'
+#          git config user.email 'singh.hardik1997@gmail.com'
           git clone git@github.com:HebiRobotics/hebi-python-examples.git 
           echo "~~~~~~ We've done the cloning ~~~~~"
           ls
