--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,11 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Use Git in the Workflow itself
-        run: |
-#          git config user.name 'Hardik Singh'
-#          git config user.email 'singh.hardik1997@gmail.com'
-          git clone git@github.com:HebiRobotics/hebi-python-examples.git 
-          echo "~~~~~~ We've done the cloning ~~~~~"
-          ls
+        run: git clone git@github.com:HebiRobotics/hebi-python-examples.git 
+          
+          
+          
+
 
 
 
