--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,13 @@ jobs:
           cp -R hrdf hebi-python-examples/kits/arm
           echo "~ The new list of hrdf files:"
           ls hebi-python-examples/kits/arm/hrdf
-          git checkout master
+
+      - name: Push the new changes onto the branch
+        run: |
+          cd hebi-python-examples
+          git add kits/arm/hrdf
+          git commit -m "HRDF Update"
+          git push origin hardik/auto_pr_hrdfs
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.1.0
