--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           #signoff: # optional
           
           # The pull request branch name.
-          branch: hardik/auto_pr_hrdfs
+          branch: hardik/automatic_pull_request
             # optional, default is create-pull-request/patch
           
           # The branch suffix type when using the alternative branching strategy.
