--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,11 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.HARDIK_TOKEN_PYTHON }} 
         with:
           # GITHUB_TOKEN or a `repo` scoped Personal Access Token (PAT)
-          token: ${{ secrets.HARDIK_TOKEN_PYTHON }} 
-            # optional, default is ${{ github.token }}
+          #token: # optional, default is ${{ github.token }}
           
           # Relative path under $GITHUB_WORKSPACE to the repository. Defaults to $GITHUB_WORKSPACE.
           path: ./hebi-python-examples # optional
