--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           echo "~~~ The new list of hrdf files: ~~~"
           ls hello-github-actions
           echo "~~~~~~ Latest hrdf updates have been copied over. ~~~~~"
-          cd hello-github-action
+          cd hello-github-actions
           echo ${{ github.actor }}
 
 
