--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.HARDIK_TOKEN_TEST }}
-
+          path: ./hello-github-actions
 
       # - name: Create Pull Request
       #   uses: peter-evans/create-pull-request@v3
