--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    name: Auto-PR Action Tester to my Repo
+    name: Update Python Repo
     runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v2
@@ -34,9 +34,10 @@ jobs:
 
   pullRequest:
     needs: [build]
+    name: Create Pull Request
     runs-on: ubuntu-16.04
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       
       - uses: actions/download-artifact@v1
         with:
